[package]
name = "incremental-tui"
version = "0.1.0"
description = "An incremental game that you can play right in your terminal"
authors = ["Alihan Çelikcan <alihancelikcan@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6.3"
tui-widget-list = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
